# worktree-manager-python

./: .gitignore  CLAUDE.md  Design.md  LICENSE  README.md  justfile  pyproject.toml
src/wtpython/: __init__.py  __main__.py  cli.py  config.py  core.py  detect.py  exceptions.py  git.py  hooks.py  models.py  output.py  shell.py  tmux.py
tests/: __init__.py  conftest.py  test_cli_setup.py  test_core.py  test_shell.py
